Fix class name
Change from .button__invisble to .button__invisible

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -137,7 +137,7 @@ body {
 .button__visible {
   padding: 2rem 7.5rem;
 }
-.button__invisble {
+.button__invisible {
   left: 0;
   top: -100%;
   padding: 2rem 0;
