--- a/assets/styles/sass/components/_button.scss
+++ b/assets/styles/sass/components/_button.scss
@@ -53,7 +53,7 @@
     padding: 2rem 7.5rem;
   }
 
-  &__invisble {
+  &__invisible {
     left: 0;
     top: -100%;
     padding: 2rem 0;
